<resources>
    <string name="app_name">Pertemuan6</string>
    
    <string name="dot">.</string>
    <string name="brace_beginning">(</string>
    <string name="brace_end">)</string>
    <string name="addition">+</string>
    <string name="subtract">-</string>
    <string name="multiplication">*</string>
    <string name="distribution">/</string>
    <string name="all_clear">AC</string>
    <string name="equal">=</string>
    
    <string name="enter_a_number">26+54</string>
    <string name="results">=80</string>
    
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>