<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:text=""
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="6dp"
        android:background="@color/line_color"
        app:layout_constraintBottom_toTopOf="@id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onOperatorClick"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_brace1"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onOperatorClick"
                android:text="@string/brace_beginning" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_brace2"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onOperatorClick"
                android:text="@string/brace_end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addition"
                style="@style/digitButton"
                android:backgroundTint="@color/orange"
                android:onClick="onOperatorClick"
                android:text="@string/addition" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/digitButton"
                android:backgroundTint="@color/orange"
                android:onClick="onOperatorClick"
                android:text="@string/subtract" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                style="@style/digitButton"
                android:backgroundTint="@color/orange"
                android:onClick="onOperatorClick"
                android:text="@string/multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_distribution"
                style="@style/digitButton"
                android:backgroundTint="@color/orange"
                android:onClick="onOperatorClick"
                android:text="@string/distribution" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_allClear"
                style="@style/digitButton"
                android:backgroundTint="@color/orange"
                android:onClick="onAllClearClick"
                android:text="@string/all_clear"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/digitButton"
                android:backgroundTint="@color/orange"
                android:onClick="onBackClick"
                app:icon="@drawable/backspace"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitButton"
                android:backgroundTint="@color/gray"
                android:onClick="onDigitClick"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/digitButton"
                android:backgroundTint="@color/green"
                android:onClick="onEqualClick"
                android:text="@string/equal" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>